--- a/PulseDrive.ioc
+++ b/PulseDrive.ioc
@@ -4,6 +4,31 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+HRTIM1.AutoDelayedMode2-Output_TA1TA2=HRTIM_AUTODELAYEDMODE_REGULAR
+HRTIM1.CompareUnit1-MasterTimer=HRTIM_COMPAREUNIT_1
+HRTIM1.CompareUnit1-Output_TA1TA2=HRTIM_COMPAREUNIT_1
+HRTIM1.CompareUnit2-Output_TA1TA2=HRTIM_COMPAREUNIT_2
+HRTIM1.CompareUnit3-Output_TA1TA2=HRTIM_COMPAREUNIT_3
+HRTIM1.CompareUnit4-Output_TA1TA2=HRTIM_COMPAREUNIT_4
+HRTIM1.CompareValue1-MasterTimer=1373
+HRTIM1.CompareValue1-Output_TA1TA2=14
+HRTIM1.CompareValue2-Output_TA1TA2=16
+HRTIM1.CompareValue3-Output_TA1TA2=1350
+HRTIM1.CompareValue4-Output_TA1TA2=1352
+HRTIM1.IPParameters=Periode_MASTER,CompareUnit1-MasterTimer,CompareValue1-MasterTimer,Periode_TA,CompareUnit1-Output_TA1TA2,CompareValue1-Output_TA1TA2,CompareUnit2-Output_TA1TA2,CompareUnit3-Output_TA1TA2,CompareUnit4-Output_TA1TA2,CompareValue3-Output_TA1TA2,CompareValue4-Output_TA1TA2,CompareValue2-Output_TA1TA2,NumberSetSource1-Output_TA1TA2,SetOutput1_Source1-Output_TA1TA2,NumberResetSource1-Output_TA1TA2,ResetOutput1_Source1-Output_TA1TA2,NumberResetSource2_TA,ResetOutput2_Source1-Output_TA1TA2,ResetOutput2_Source2-Output_TA1TA2,AutoDelayedMode2-Output_TA1TA2,NumberSetSource2_TA,SetOutput2_Source1-Output_TA1TA2,SetOutput2_Source2-Output_TA1TA2
+HRTIM1.IPParametersWithoutCheck=NumberSetSource2_TA,CompareValue2-Output_TA1TA2
+HRTIM1.NumberResetSource1-Output_TA1TA2=1
+HRTIM1.NumberResetSource2_TA=2
+HRTIM1.NumberSetSource1-Output_TA1TA2=1
+HRTIM1.NumberSetSource2_TA=2
+HRTIM1.Periode_MASTER=46080
+HRTIM1.Periode_TA=46080
+HRTIM1.ResetOutput1_Source1-Output_TA1TA2=HRTIM_OUTPUTRESET_MASTERCMP1
+HRTIM1.ResetOutput2_Source1-Output_TA1TA2=HRTIM_OUTPUTRESET_TIMCMP2
+HRTIM1.ResetOutput2_Source2-Output_TA1TA2=HRTIM_OUTPUTRESET_TIMCMP4
+HRTIM1.SetOutput1_Source1-Output_TA1TA2=HRTIM_OUTPUTSET_MASTERPER
+HRTIM1.SetOutput2_Source1-Output_TA1TA2=HRTIM_OUTPUTSET_TIMCMP1
+HRTIM1.SetOutput2_Source2-Output_TA1TA2=HRTIM_OUTPUTSET_TIMCMP3
 I2C3.IPParameters=Timing
 I2C3.Timing=0x60715075
 KeepUserPlacement=false
@@ -75,6 +100,7 @@ MxDb.Version=DB.6.0.160
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
+NVIC.HRTIM1_TIMA_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -105,14 +131,11 @@ PA9.Locked=true
 PA9.Mode=Output_TA1TA2
 PA9.Signal=HRTIM1_CHA2
 PB12.Locked=true
-PB12.Mode=Output_TC1TC2
-PB12.Signal=HRTIM1_CHC1
+PB12.Signal=GPIO_Output
 PB13.Locked=true
-PB13.Mode=Output_TC1TC2
-PB13.Signal=HRTIM1_CHC2
+PB13.Signal=GPIO_Output
 PB14.Locked=true
-PB14.Mode=Output_TD1
-PB14.Signal=HRTIM1_CHD1
+PB14.Signal=GPIO_Output
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB3.Locked=true
